--- a/notebook1.ipynb
+++ b/notebook1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOinjHToQKTfsdAOW5ZKln1",
+      "authorship_tag": "ABX9TyPqng/NrGu6OWUP7gbppNcA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -51,9 +51,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np"
+      ],
       "metadata": {
         "id": "Xhd8D-K8SSZX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cBNkBsrUSr44"
       },
       "execution_count": null,
       "outputs": []
